k8s/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: project-draft-db
          image: mysql:latest         
          ports:
            - containerPort: 3306
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 10



---
apiVersion: v1
kind: Service
metadata:
  name: project-draft-db
spec:
  selector:
    app: project-draft-db
  ports:
  - port: 3306


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-draft
  labels:
    app: project-draft
spec:
  selector:
    matchLabels:
      app: project-draft
  replicas: 1
  template:
    metadata:
      labels:
        app: project-draft
    spec:
      containers:
        - image: investments:release
          imagePullPolicy: IfNotPresent
          name: project-draft
          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: project-draft
spec:
  type: LoadBalancer
  selector:
    app: project-draft
  ports:
    - port: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: project-draft-redis
spec:
  selector:
    app: project-draft-redis
  ports:
    - port: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-draft
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: project-draft
                port:
                  number: 8000
